--- a/要件定義.md
+++ b/要件定義.md
@@ -92,6 +92,19 @@
   セッションの有効期限や自動ログアウト機能がある。
 
 * 投稿（会員のみ）
+  * 画像投稿：  
+  複数枚の画像を添付して投稿できる。
+  * カテゴリの付与：  
+  カテゴリを選択して、ランキング表示や検索機能に引っ掛ける。
+  * コメントといいね：  
+  他のユーザーの投稿に対して、ログインユーザーはコメントやいいねを送れる。
+  * 非公開設定：  
+  投稿する際に公開/非公開を選択できる。
+  * 編集と削除：  
+  投稿後、編集と削除を行える。
+  * 報告機能：  
+  不適切な情報や内容があった場合、ログインユーザーは運営に報告できる。
+
 * カテゴリ検索
 * コメント（会員のみ）
 * お問い合わせ
