--- a/要件定義.md
+++ b/要件定義.md
@@ -5,7 +5,7 @@
 
 ### 目的
 * 旅行の記録を、自分用の備忘録として投稿できる。
-* 旅行を計画する際に他のユーザーの投稿を参考にして、地域や季節、人数や移動手段に応じたスケジュールが建てやすくなる。
+* 旅行を計画する際に他のユーザーの投稿を参考にして、地域や季節などに応じたスケジュールが建てやすくなる。
 * 行ってみたい場所の候補が増える。
 
 ### 制作背景
@@ -71,7 +71,7 @@
   * FAQ & お問い合わせページ：  
   よくある質問の一覧が表示され、その下にお問い合わせフォームがある。名前、メールアドレス、本文が入力できるようになっている。
   * 検索バー：  
-  「地域」「季節」「移動手段」「人数」でフィルタリングできる他、キーワードで自由に検索できる。
+  「地域」「季節」「予算」「移動手段」「人数」でフィルタリングできる他、キーワードで自由に検索できる。
   * 通知アイコン：  
   ログインユーザーが新しいコメントやいいねを受け取った時に通知アイコンが表示される。
 
@@ -106,6 +106,12 @@
   不適切な情報や内容があった場合、ログインユーザーは運営に報告できる。
 
 * カテゴリ検索
+  * 地域別
+  * 季節別
+  * 予算別
+  * 移動手段別
+  * 人数別
+
 * コメント（会員のみ）
 * お問い合わせ
 
