--- a/要件定義.md
+++ b/要件定義.md
@@ -113,7 +113,16 @@
   * 人数別
 
 * コメント（会員のみ）
+  * リプライ：  
+  特定のコメントに対する返信ができる。
+  * フィルタリング：  
+  不適切な表現があった場合はコメント送信できない仕様にする。
+
 * お問い合わせ
+  * カテゴリ別：  
+  事前にお問い合わせ内容をカテゴリ別に分類する。
+  * 送信完了メール：  
+  お問い合わせを送信した直後に自動返信メールを送り、内容が受理されたことを通知する。
 
 ### 管理者機能
 * アカウントと認証
