--- a/要件定義.md
+++ b/要件定義.md
@@ -87,21 +87,19 @@
   * ダッシュボード：  
   プロフィールの編集、パスワード変更、通知設定などの設定ができる。
   * パスワードリセット：  
-  パスワードを忘れてしまった場合、メールリンクを通じてパスワードのリセットができる。
+  メールリンクを通じてパスワードのリセットができる。
   * セッション管理：  
   セッションの有効期限や自動ログアウト機能がある。
 
 * 投稿（会員のみ）
-  * 画像投稿：  
-  複数枚の画像を添付して投稿できる。
+  * 画像添付：  
+  画像は複数枚添付できる。
   * カテゴリの付与：  
   カテゴリを選択して、ランキング表示や検索機能に引っ掛ける。
   * コメントといいね：  
-  他のユーザーの投稿に対して、ログインユーザーはコメントやいいねを送れる。
-  * 非公開設定：  
-  投稿する際に公開/非公開を選択できる。
-  * 編集と削除：  
-  投稿後、編集と削除を行える。
+  ログインユーザーはコメントやいいねを送れる。
+  * 非公開設定
+  * 編集と削除
   * 報告機能：  
   不適切な情報や内容があった場合、ログインユーザーは運営に報告できる。
 
@@ -113,22 +111,33 @@
   * 人数別
 
 * コメント（会員のみ）
-  * リプライ：  
-  特定のコメントに対する返信ができる。
+  * リプライ
   * フィルタリング：  
-  不適切な表現があった場合はコメント送信できない仕様にする。
+  不適切な表現があった場合はコメント送信できない。
 
 * お問い合わせ
-  * カテゴリ別：  
-  事前にお問い合わせ内容をカテゴリ別に分類する。
+  * カテゴリ分類
   * 送信完了メール：  
   お問い合わせを送信した直後に自動返信メールを送り、内容が受理されたことを通知する。
 
 ### 管理者機能
+
 * アカウントと認証
+  * SNSログイン
+  * パスワードのハッシュ化
+
 * 投稿
+  * 画像添付
+  * リアルタイム処理
+  * ドラフト機能：  
+  途中までの投稿を保存し、後で編集・投稿できるようにする。
+
 * カテゴリ検索
+
 * コメント
+  * リアルタイム処理
+  * フィルタリング：  
+  不適切な表現があった場合はコメント送信できない。
 * お問い合わせ
 * セキュリティー
 * 通知
