--- a/要件定義.md
+++ b/要件定義.md
@@ -138,9 +138,14 @@
   * リアルタイム処理
   * フィルタリング：  
   不適切な表現があった場合はコメント送信できない。
+
 * お問い合わせ
-* セキュリティー
+  * 送信完了メール：  
+  お問い合わせを送信した直後に自動返信メールを送り、内容が受理されたことを通知する。
+
 * 通知
+  * カスタマイズ：  
+  通知のオンオフをユーザーは選択できる。
 
 ## 非機能要件
 * パフォーマンス
